Revision history for {{$dist->name}}

{{$NEXT}}

0.4.0     2011-02-23 12:08:32 Australia/Sydney
    Added MongoDB (& unlisted prereq Try::Tiny)

0.3.1     2011-02-11 20:57:48 Australia/Sydney
    Stop doubling up of sections in POD

0.3.0     2011-02-08 12:45:36 Australia/Sydney
    Added ack

0.2.0     2011-02-04 19:20:38 Australia/Sydney
    More Email stuff, and corrected where Moose came from

0.1.0     2010-11-09 11:56:49 Australia/Sydney
    Added JSON

0.0.1     2010-11-05 15:28:12 Australia/Sydney
    Initial build