@@ -1,5 +1,5 @@
 name = Task-BeLike-Cebjyre
-version = 0.4.0
+version = 0.5.0
 author  = Glenn Fowler <cebjyre@cpan.org>
 license = Perl_5
 copyright_holder = Glenn Fowler
