@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    Added my modules, Net::OAuth, and some test modules
 
 0.4.0     2011-02-23 12:08:32 Australia/Sydney
     Added MongoDB (& unlisted prereq Try::Tiny)
